--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
     rel='stylesheet'>
 
 
+  <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+
   <link href='https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap' rel='stylesheet'>
 
   <link rel='stylesheet'
