--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,10 @@
   <link rel='preconnect' href='https://fonts.googleapis.com'>
   <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
 
-  <link href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@300' rel='stylesheet' />
-  <link rel='preconnect' href='https://fonts.googleapis.com'>
-  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
-  <link href='https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap'
+  <link href='https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght@8..144,151,800&display=swap'
         rel='stylesheet'>
+
+  <link href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@300' rel='stylesheet'/>
 
   <link href='https://fonts.googleapis.com/css2?family=Material+Icons+Outlined&display=swap' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap' rel='stylesheet'>
@@ -25,43 +24,27 @@
     rel='stylesheet'>
 
 
-  <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-
   <link href='https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap' rel='stylesheet'>
 
   <link rel='stylesheet'
-        href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' />
+        href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200'/>
 
-  <!--<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght@8..144,100,400;8..144,125,500&display=swap" rel="stylesheet">-->
   <link
     href='https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght@8..144,100,400;8..144,112.5,400;8..144,125,500&display=swap'
     rel='stylesheet'>
 
-
-  <link
-    href='https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap'
-    rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap'
-        rel='stylesheet'>
-
   <link rel='stylesheet'
-        href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' />
+        href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200'/>
+
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wdth,wght@112.5,300;112.5,500&display=swap" rel="stylesheet">
 
   <link rel='manifest' href='manifest.webmanifest'>
   <meta name='theme-color' media='(prefers-color-scheme: light)' content='#fff'>
   <meta name='theme-color' media='(prefers-color-scheme: dark)' content='#49454F'>
   <!--  <meta name="color-scheme" content="light dark">-->
-
-  <link rel='preconnect' href='https://fonts.googleapis.com'>
-  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
-
-  <link href='https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght@8..144,151,800&display=swap'
-        rel='stylesheet'>
-
 </head>
 <body standardized-themed-scrollbar>
-<app-root />
+<app-root/>
 <noscript>
   <img
     src='https://media1.giphy.com/media/xT5LMHxhOfscxPfIfm/200.webp?cid=ecf05e47ge3yl6d9huwizsthes1b97b01dl8bj5v5wqff9ir&rid=200.webp&ct=g'
