--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
   <meta name='theme-color' media='(prefers-color-scheme: dark)' content='#49454F'>
   <!--  <meta name="color-scheme" content="light dark">-->
 </head>
-<body standardized-themed-scrollbar>
+<body>
 <app-root/>
 <noscript>
   <img
