--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,14 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wdth,wght@112.5,300;112.5,500&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght@8..144,125,300&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght@8..144,112.5,700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght@8..144,151,300&display=swap" rel="stylesheet">
+
+
+
   <link rel='manifest' href='manifest.webmanifest'>
   <meta name='theme-color' media='(prefers-color-scheme: light)' content='#fff'>
   <meta name='theme-color' media='(prefers-color-scheme: dark)' content='#49454F'>
